NRC task update

--- a/pages/taches-principales-canada-ca.html
+++ b/pages/taches-principales-canada-ca.html
@@ -463,42 +463,47 @@
 <td> <a href="http://www.international.gc.ca/gac-amc/index.aspx?lang=fra">Affaires mondiales Canada</a> </td>
 <td> 279 258 </td>
 <td> 33
-</td></tr><tr><td> 78 </td>
-<td> Consulter les journaux scientifiques, techniques et médicaux </td>
-<td> <a href="https://www.canada.ca/fr/conseil-national-recherches.html">Conseil national de recherches Canada</a> </td>
-<td> 277 579 </td>
-<td> -
-</td></tr><tr><td> 79 </td>
+</td></tr>
+
+<tr><td> 78 </td>
 <td> Voir les règles pour une utilisation sécuritaire et légale des drones </td>
 <td> <a href="https://www.canada.ca/fr/transports-canada.html">Transports Canada</a> </td>
 <td> 276 617 </td>
 <td> -
-</td></tr><tr><td> 80 </td>
+</td></tr><tr><td> 79 </td>
 <td> Demander de venir au Canada en tant que réfugié </td>
 <td> <a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a> </td>
 <td> 264 512 </td>
 <td> -
-</td></tr><tr><td> 81 </td>
+</td></tr><tr><td> 80 </td>
 <td> Demander les prestations de congé de maternité ou parental </td>
 <td> <a href="https://www.canada.ca/fr/emploi-developpement-social.html">Emploi et Développement social Canada</a> </td>
 <td> 262 069 </td>
 <td> -
-</td></tr><tr><td> 82 </td>
+</td></tr><tr><td> 81 </td>
 <td> Enregistrer une marquer de commerce </td>
 <td> <a href="https://www.canada.ca/fr/innovation-sciences-developpement-economique.html">Innovation, Sciences et Développement économique Canada</a> </td>
 <td> 260 189 </td>
 <td> 7
-</td></tr><tr><td> 83 </td>
+</td></tr><tr><td> 82 </td>
 <td> Parrainer l’arrivée d’un réfugié au Canada </td>
 <td> <a href="https://www.canada.ca/fr/immigration-refugies-citoyennete.html">Immigration, Réfugiés et Citoyenneté Canada</a> </td>
 <td> 259 795 </td>
 <td> -
-</td></tr><tr><td> 84 </td>
+</td></tr><tr><td> 83 </td>
 <td> Trouver les médicaments qui sont couverts par le programme de Services de santé non assurés </td>
 <td> <a href="https://www.canada.ca/fr/sante-canada.html">Santé Canada</a> </td>
 <td> 250 000 </td>
 <td> -
-</td></tr><tr><td> 85 </td>
+</td></tr>
+<tr><td> 84 </td>
+<td> Vérifier l'heure officielle  </td>
+<td> <a href="https://www.canada.ca/fr/conseil-national-recherches.html">Conseil national de recherches Canada</a> </td>
+<td> 246 000 </td>
+<td> -
+</td></tr>
+
+<tr><td> 85 </td>
 <td> Rechercher son histoire familiale </td>
 <td> <a href="https://www.canada.ca/fr/bibliotheque-archives.html">Bibliothèque et Archives Canada</a> </td>
 <td> 245 964 </td>
@@ -586,7 +591,7 @@
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "2017-12-07",
+		dateModified: "2018-05-04",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
