--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -465,42 +465,47 @@
 <td> <a href="http://www.international.gc.ca/gac-amc/index.aspx?lang=eng">Global Affairs Canada</a> </td>
 <td> 279,258 </td>
 <td> 33
-</td></tr><tr><td> 78 </td>
-<td> Access scientific, technical and medical journals </td>
-<td> <a href="https://www.canada.ca/en/national-research-council.html">National Research Council Canada</a> </td>
-<td> 277579 </td>
-<td> -
-</td></tr><tr><td> 79 </td>
+</td></tr>
+
+<tr><td> 78 </td>
 <td> See rules for safe and legal drone use </td>
 <td> <a href="https://www.canada.ca/en/transport-canada.html">Transport Canada</a> </td>
 <td> 276,617 </td>
 <td> -
-</td></tr><tr><td> 80 </td>
+</td></tr><tr><td> 79 </td>
 <td> Apply to come to Canada as a refugee </td>
 <td> <a href="https://www.canada.ca/en/immigration-refugees-citizenship.html"> Immigration, Refugees and Citizenship Canada </a> </td>
 <td> 264,512 </td>
 <td> -
-</td></tr><tr><td> 81 </td>
+</td></tr><tr><td> 80 </td>
 <td> Apply for maternity or parental leave benefits </td>
 <td> <a href="https://www.canada.ca/en/employment-social-development.html">Employment and Social Development Canada</a> </td>
 <td> 262,069 </td>
 <td> -
-</td></tr><tr><td> 82 </td>
+</td></tr><tr><td> 81 </td>
 <td> File a trademark </td>
 <td> <a href="https://www.canada.ca/en/innovation-science-economic-development.html">Innovation, Science and Economic Development Canada</a> </td>
 <td> 260,189 </td>
 <td> 7
-</td></tr><tr><td> 83 </td>
+</td></tr><tr><td> 82 </td>
 <td> Sponsor a refugee to come to Canada </td>
 <td> <a href="https://www.canada.ca/en/immigration-refugees-citizenship.html"> Immigration, Refugees and Citizenship Canada </a> </td>
 <td> 259,795 </td>
 <td> -
-</td></tr><tr><td> 84 </td>
+</td></tr><tr><td> 83 </td>
 <td> Find out what drugs are covered by the Non-Insured Health Benefits program </td>
 <td> <a href="https://www.canada.ca/en/health-canada.html">Health Canada</a> </td>
 <td> 250,000 </td>
 <td> -
-</td></tr><tr><td> 85 </td>
+</td></tr>
+<tr><td> 84 </td>
+<td> Check the official time </td>
+<td> <a href="https://www.canada.ca/en/national-research-council.html">National Research Council Canada</a> </td>
+<td> 246,000 </td>
+<td> -
+</td></tr>
+
+<tr><td> 85 </td>
 <td> Research family history </td>
 <td> <a href="https://www.canada.ca/en/library-archives.html">Library and Archives Canada</a> </td>
 <td> 245,964 </td>
@@ -592,7 +597,7 @@
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "2017-12-07",
+		dateModified: "2018-05-04",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
