--- a/research-summaries/diseases-research-summary.html
+++ b/research-summaries/diseases-research-summary.html
@@ -226,10 +226,8 @@ Let us know what you think about this project. Email us at &lt;information@tbs-s
 <h2> Explore further </h2>
 
 * [How we identify top tasks for Canada.ca](https://canada-ca.github.io/2017/12/11/top-100-for-gc.html) presents the methodology we use to identify and manage the top 100 tasks for Canada.ca
-* [How we're optimizing top tasks on Canada.ca](https://canada-ca.github.io/category/2017/08/21/optimization-overview.html) shares more about how we're focusing now on improving specific top tasks on Canada.ca
+* [Countering vaccine hesitancy](http://pediatrics.aappublications.org/content/early/2016/08/25/peds.2016-2146) is an academic article on overcoming concerns about getting immunized
 * [What Really Matters: Focusing on Top Tasks](https://alistapart.com/article/what-really-matters-focusing-on-top-tasks) is a great article from Gerry McGovern on the value of top tasks and the survey voting method to validate them
-* [New Thinking](http://gerrymcgovern.com/new-thinking/) is where Gerry McGovern posts weekly on a range of top task management and digital transformation themes 
-* [Countering vaccine hesitancy](http://pediatrics.aappublications.org/content/early/2016/08/25/peds.2016-2146) an academic article on overcoming concerns about getting immunized
 
 <!-- ## Detailed task scenarios as presented to participants -->
 
