coding last half of page

--- a/research-summaries/diseases-research-summary.html
+++ b/research-summaries/diseases-research-summary.html
@@ -201,28 +201,29 @@ Below that is a short paragraph of text too small to read, followed by a search 
 	   <strong>NOTE that we have to include a datatable listing all of these values, it's not enough to include an alt tag saying that it's a chart</strong>
        </div>
 <br />
- 
+
 <h2>Key drivers of success</h2>
- 
- The team derived this set of 6 design principles that appeared to have the most impact on improving success rates: 
 
-* Learn from users: take the time to understand their needs and expectations, and use data to understand the questions they have
-	
-* Create answers, not information: craft clear, simple answers for questions people have
-	
-* Design for mobile first: less prose, more space and interaction
+ <p>The team derived this set of 6 design principles that appeared to have the most impact on improving success rates: </p>
+<ul>
 
-* Reduce layers: Group tasks and sub-tasks together to improve findability
+<li>Learn from users: take the time to understand their needs and expectations, and use data to understand the questions they have</li>
 
-* Use calls to action: Design content flow from specific to general
+<li>Create answers, not information: craft clear, simple answers for questions people have</li>
 
-* Lose the paper mentality: bring content onto web pages and out of PDFs and posters
+<li>Design for mobile first: less prose, more space and interaction</li>
 
+<li>Reduce layers: Group tasks and sub-tasks together to improve findability</li>
+
+<li>Use calls to action: Design content flow from specific to general</li>
+
+<li>Lose the paper mentality: bring content onto web pages and out of PDFs and posters</li>
+</ul>
 
 <h2> Request the research </h2>
-	
-If you’d like to see the research findings from this project, let us know. Email us at information@tbs-sct.gc.ca. 
-	
+
+If you’d like to see the research findings from this project, let us know. Email us at information@tbs-sct.gc.ca.
+
 <h2> What do you think? </h2>
 
 Let us know what you think about this project.  Tweet using the hashtag #Canadadotca.
@@ -231,20 +232,20 @@ Let us know what you think about this project.  Tweet using the hashtag #Canadad
 
 * [See the new Immunization page,](https://www.canada.ca/en/public-health/services/vaccination-children.html) based on the new designs in this project
 * [Countering vaccine hesitancy](http://pediatrics.aappublications.org/content/early/2016/08/25/peds.2016-2146) is an academic article on overcoming concerns about getting immunized
-* [Read overviews of other projects](https://canada-ca.github.io/pages/projectoverview.html) with our partners 
+* [Read overviews of other projects](https://canada-ca.github.io/pages/projectoverview.html) with our partners
 
 <!-- ## Detailed task scenarios as presented to participants -->
 
-<!-- Do we really want to have to maintain this survey forever...? 
+<!-- Do we really want to have to maintain this survey forever...?
 You can try out the scenario display process and tasks yourself (select that you are doing the tasks at the Akendi Office) at this SurveyGizmo link: http://ca.surveygizmo.com/s3/50011188/Health-task-display-v1 EN http://ca.surveygizmo.com/s3/50011188/sante-v1 FR -->
 
 <!-- not sure we need to include this stuff
-1.This year's flu season could be worse than usual. Find the government’s advice on the most important way to avoid getting the flu. 
+1.This year's flu season could be worse than usual. Find the government’s advice on the most important way to avoid getting the flu.
 2.Your friend put up a post urging her friends not to vaccinate their kids because of the risk of autism. Find some answers that would make you feel ready to discuss it with her.
-3. You got a few mosquito bites on your honeymoon down south but you feel fine. Before getting pregnant, you want to make sure you don’t have Zika. Is there a test that can tell if you're infected? 
+3. You got a few mosquito bites on your honeymoon down south but you feel fine. Before getting pregnant, you want to make sure you don’t have Zika. Is there a test that can tell if you're infected?
 4. You plan to start a family soon, but want a sunny vacation first. Which of the countries below should you avoid because of the risk of Zika? (For Bermuda, Cuba, Jamaica)
 5. Your baby was born on the first of this month. At what age is the first set of vaccinations recommended? (2 months, 4 months, 6 months)
-6. It is flu season and a family member is pregnant. Find out whether or not she should get a flu shot while pregnant. 
+6. It is flu season and a family member is pregnant. Find out whether or not she should get a flu shot while pregnant.
 7. You don't want to miss work tomorrow but should stay away if you have the flu. Yesterday, all of the symptoms below hit - find out which ones are the signal that it's the flu.
 8. Find out whether the number of cases of flu last week were higher or lower than usual, to help you decide if you should get a flu shot now or wait.
 9. You think you heard something on the news about people being sick in Italy. Is there a particular concern you should be aware of before you go with your baby?
