--- a/research-summaries/diseases-research-summary.html
+++ b/research-summaries/diseases-research-summary.html
@@ -222,7 +222,7 @@ Below that is a short paragraph of text too small to read, followed by a search 
 
 <h2> Request the research </h2>
 
-If you’d like to see the research findings from this project, let us know. Email us at information@tbs-sct.gc.ca.
+<p>Let us know what you think about this project. Email us at <a href="mailto:information@tbs-sct.gc.ca">information@tbs-sct.gc.ca</a> or tweet using the hashtag #Canadadotca.</p>
 
 <h2> What do you think? </h2>
 
@@ -230,9 +230,13 @@ Let us know what you think about this project.  Tweet using the hashtag #Canadad
 
 <h2> Explore further </h2>
 
-* [See the new Immunization page,](https://www.canada.ca/en/public-health/services/vaccination-children.html) based on the new designs in this project
+<ul>
+
+	<li><a href="https://www.canada.ca/en/public-health/services/vaccination-children.html"See the new Immunization page,</a> based on the new designs in this project</li>
 * [Countering vaccine hesitancy](http://pediatrics.aappublications.org/content/early/2016/08/25/peds.2016-2146) is an academic article on overcoming concerns about getting immunized
 * [Read overviews of other projects](https://canada-ca.github.io/pages/projectoverview.html) with our partners
+
+</ul>
 
 
 </div>
