--- a/research-summaries/frenchplaceholder.html
+++ b/research-summaries/frenchplaceholder.html
@@ -205,7 +205,7 @@ Below that is a short paragraph of text too small to read, followed by a search 
 
 <div itemprop="text" class="" data="type-text">
       <div class="img-responsive center-block">
-          <span class=""><img src="../images/diseases-maladies-immun/Baseline_vs_Validation_Success_results.JPG" alt="image-of-chart-showing-baseline-and-final-test-results" width="800px" />
+          <span class=""><img src="../images/diseases-maladies-immun/Base-Validation-Resultats.jpg" alt="image-of-chart-showing-baseline-and-final-test-results" width="800px" />
        </span>
 	   <strong>NOTE that we have to include a datatable listing all of these values, it's not enough to include an alt tag saying that it's a chart</strong>
        </div>
