--- a/research-summaries/diseases-research-summary.html
+++ b/research-summaries/diseases-research-summary.html
@@ -212,10 +212,10 @@ Below that is a short paragraph of text too small to read, followed by a search 
 
 			 <details>
 			 <summary>
-			 Detailed description
+			 Datable
 			 </summary>
 			 <p>
-	DESCRIPTION NEEDS TO GO HERE
+Jennifer will build a table
 			 </p>
 
 			 </details>
