--- a/research-summaries/frenchplaceholder.html
+++ b/research-summaries/frenchplaceholder.html
@@ -212,10 +212,10 @@ Below that is a short paragraph of text too small to read, followed by a search 
 
 			 <details>
 			 <summary>
-			 Detailed description
+			 Datatable
 			 </summary>
 			 <p>
-	DESCRIPTION NEEDS TO GO HERE
+Jennifer will build the table
 			 </p>
 
 			 </details>
