added text description

--- a/research-summaries/diseases-research-summary.html
+++ b/research-summaries/diseases-research-summary.html
@@ -145,9 +145,23 @@ color: #3095B5 !important;
 <summary>
 Detailed description
 </summary>
+<p>[Task being voted on, which is on a printed paper sheet]</p>
+<p>It is flu season and a family member is pregnant. Find out whether or not she would get a flu shot while pregnant.</p>
+<ul><li> Start at the F Scenario</li></ul>
+<p>Choose your answer below:</p>
+<ul>
+	<li>It specifically says she should not get a flu shot</li>
+		<li>It specifically says she should get a flu shot</li>
+			<li>I didn't find or don't think I can find the answer within 5 mins</li>
+</ul>
+
+<p>[Sticky notes are placed on top of the printed out task]</p>
+<p>[Sticky note 1: Job story] When I get pregnant I want to know what vaccines I can get so I can protect/not harm my child [There are voting dots on this note: 7 red and 3 blue]</p>
+	<p>[Sticky note 2] Difficult in imm, not flu</p>
+		<p>[Sticky note 3] Flu</p>
+			<p>[Sticky note 4] Immunize</p>
+
 <p>
-DESCRIPTION NEEDS TO GO HERE
-</p>
 
 </details>
 <p><br /></p>
