--- a/research-summaries/diseases-research-summary.html
+++ b/research-summaries/diseases-research-summary.html
@@ -221,17 +221,62 @@ Below that is a short paragraph of text too small to read, followed by a search 
       <div class="img-responsive center-block">
           <span class=""><img src="../images/diseases-maladies-immun/Baseline_vs_Validation_Success_results.JPG" alt="image-of-chart-showing-baseline-and-final-test-results" width="800px" />
        </span>
-	   <strong>NOTE that we have to include a datatable listing all of these values, it's not enough to include an alt tag saying that it's a chart</strong>
+
        </div>
 
 			 <details>
 			 <summary>
-			 Datable
+			 Datable description
 			 </summary>
 			 <p>
-Jennifer will build a table
-			 </p>
+				 <div class="table-bravo">
+				       <table class="table table-bordered">
 
+				<thead><tr><th scope="col">Task</th>
+				<th scope="col">Baseline</th>
+				<th scope="col">Validation</th>
+
+			</tr></thead><tbody><tr><td>1. Advice on avoiding flu: shot</td>
+				<td  >69%</td>
+				<td>87%</td>
+			</tr><tr><td>2. Austism and immunization myth</td>
+				<td  >13%</td>
+				<td>80%</td>
+			</tr><tr><td>3. Zika test after trip</td>
+				<td  >75%</td>
+				<td>100%</td>
+			</tr><tr><td>4. How to avoid Zika: countries</td>
+				<td  >69%</td>
+				<td>100%</td>
+			</tr><tr><td>5. Newborne 1st vaccination schedule</td>
+				<td  >50%</td>
+				<td>75%</td>
+			</tr><tr><td>6. Flu shot when pregnant</td>
+				<td>75%</td>
+				<td>94%</td>
+			</tr><tr><td>7. Flu symptoms: headache, fever</td>
+				<td  >50%</td>
+				<td>94%</td>
+			</tr><tr><td>8. FluWatch: case comparison</td>
+				<td  >94%</td>
+				<td>88%</td>
+			</tr>
+			<tr><td>9. Italy: Measles health alert</td>
+				<td  >50%</td>
+				<td>69%</td>
+				</tr>
+				<tr><td>10. Vaccines for trip to Mexico</td>
+					<td  >13%</td>
+					<td>69%</td>
+					</tr>
+					<tr><td>11. H3N2 flu in this year's vaccine</td>
+						<td  >31%</td>
+						<td>73%</td>
+						</tr>
+
+			</tbody></table>
+			 </p>
+<p>32 total participants</p>
 			 </details>
 <br />
 
