--- a/research-summaries/frenchplaceholder.html
+++ b/research-summaries/frenchplaceholder.html
@@ -207,17 +207,62 @@ Below that is a short paragraph of text too small to read, followed by a search 
       <div class="img-responsive center-block">
           <span class=""><img src="../images/diseases-maladies-immun/Base-Validation-Resultats.jpg" alt="image-of-chart-showing-baseline-and-final-test-results" width="800px" />
        </span>
-	   <strong>NOTE that we have to include a datatable listing all of these values, it's not enough to include an alt tag saying that it's a chart</strong>
+
        </div>
 
 			 <details>
 			 <summary>
-			 Datatable
+			 Datable description
 			 </summary>
 			 <p>
-Jennifer will build the table
-			 </p>
+				 <div class="table-bravo">
+							 <table class="table table-bordered">
 
+				<thead><tr><th scope="col">Tâche</th>
+				<th scope="col">Base=</th>
+				<th scope="col">Validation</th>
+
+			</tr></thead><tbody><tr><td>1. Conseil pour se protéger contre la grippe: vaccin</td>
+				<td  >69%</td>
+				<td>87%</td>
+			</tr><tr><td>2. Myth du vaccin qui cause l'autisme</td>
+				<td  >13%</td>
+				<td>80%</td>
+			</tr><tr><td>3. Test de dépistage du Zika au retour de voyage</td>
+				<td  >75%</td>
+				<td>100%</td>
+			</tr><tr><td>4. Comment éviter d'attraper le Zika: pays</td>
+				<td  >69%</td>
+				<td>100%</td>
+			</tr><tr><td>5. Premier calendrier de vaccination pour les nouveau-nés</td>
+				<td  >50%</td>
+				<td>75%</td>
+			</tr><tr><td>6. Vaccin contre la grippe pendant la grossesse</td>
+				<td>75%</td>
+				<td>94%</td>
+			</tr><tr><td>7. Symptômes de la grippe: maux de tête, fièvre</td>
+				<td  >50%</td>
+				<td>94%</td>
+			</tr><tr><td>8. Surveillance de l'influenza: cas de la semaine dernière</td>
+				<td  >94%</td>
+				<td>88%</td>
+			</tr>
+			<tr><td>9. Italie: Alerte médicale, rougeole</td>
+				<td  >50%</td>
+				<td>69%</td>
+				</tr>
+				<tr><td>10. Vaccins pour les voyages au Mexique</td>
+					<td  >13%</td>
+					<td>69%</td>
+					</tr>
+					<tr><td>11. Grippe H3N2 dans le vaccin de cette année</td>
+						<td  >31%</td>
+						<td>73%</td>
+						</tr>
+
+			</tbody></table>
+			 </p>
+<p>32 participants total</p>
 			 </details>
 <br />
 
