--- a/research-summaries/frenchplaceholder.html
+++ b/research-summaries/frenchplaceholder.html
@@ -219,7 +219,7 @@ Below that is a short paragraph of text too small to read, followed by a search 
 							 <table class="table table-bordered">
 
 				<thead><tr><th scope="col">Tâche</th>
-				<th scope="col">Base=</th>
+				<th scope="col">Base</th>
 				<th scope="col">Validation</th>
 
 			</tr></thead><tbody><tr><td>1. Conseil pour se protéger contre la grippe: vaccin</td>
