--- a/research-summaries/diseases-research-summary.html
+++ b/research-summaries/diseases-research-summary.html
@@ -156,7 +156,7 @@ Detailed description
 </ul>
 
 <p>[Sticky notes are placed on top of the printed out task]</p>
-<p>[Sticky note 1: Job story] When I get pregnant I want to know what vaccines I can get so I can protect/not harm my child [There are voting dots on this note: 7 red and 3 blue]</p>
+<p>[Sticky note 1: Job story] When I get pregnant I want to know what vaccines I can get so I can protect/not harm my child [There are 10 voting dots on the note]</p>
 	<p>[Sticky note 2] Difficult in imm, not flu</p>
 		<p>[Sticky note 3] Flu</p>
 			<p>[Sticky note 4] Immunize</p>
@@ -201,7 +201,7 @@ Detailed description
 <p>
 Two smartphones are shown with 2 different web pages. One is labelled "Baseline", the other "Redesign". In the "Baseline" page, the title is "Countries with recent or ongoing risk of Zika virus infection", followed by 2 long paragraphs of text that are too small to read. Following that is a list of countries beginning with "A", starting with Angola, Anguilla, Antigua and Barbuda, Argentina, and Aruba. An arrow points to the country list with an annotation "Too small to touch. Click to see answer.".</p>
 <p>
-In the "Redesign" page, the title is "Zika cirus: Destinations with risk of Zika". Below is a list of 6 links that are too small to read, one of which is highlighted. An arrow points to the highlighted link with the annotation "Tasks grouped together. Simplified title".</p>
+In the "Redesign" page, the title is "Zika virus: Destinations with risk of Zika". Below is a list of 6 links that are too small to read, one of which is highlighted. An arrow points to the highlighted link with the annotation "Tasks grouped together. Simplified title".</p>
 <p>
 Below that is a short paragraph of text too small to read, followed by a search box and a table showing countries with "No risk of Zika", "Low risk of Zika" or "High risk of Zika" next to them. An arrow points to the countries with an annotation "All countries listed. Answers in view."
 </p>
