updates and edits

--- a/research-summaries/diseases-research-summary.html
+++ b/research-summaries/diseases-research-summary.html
@@ -138,7 +138,7 @@ color: #3095B5 !important;
 </ul>
 
 <figure>
-<img class="img-responsive" alt="Hand-written sticky note on top of page with task for getting flu shot when pregnant.There are sticker dots on the note." src="../images/diseases-maladies-immun/task_JTBD.jpg" />
+<img class="img-responsive" alt="Hand-written sticky note on top of page with task for getting flu shot when pregnant. There are sticker dots on the note." src="../images/diseases-maladies-immun/task_JTBD.jpg" />
 <figcaption><small>Job stories with team's voting dots</small></figcaption>
 </figure>
 <details>
@@ -146,7 +146,7 @@ color: #3095B5 !important;
 Detailed description
 </summary>
 <p>[Task being voted on, which is on a printed paper sheet]</p>
-<p>It is flu season and a family member is pregnant. Find out whether or not she would get a flu shot while pregnant.</p>
+<p>It is flu season and a family member is pregnant. Find out whether or not she should get a flu shot while pregnant.</p>
 <ul><li> Start at the F Scenario</li></ul>
 <p>Choose your answer below:</p>
 <ul>
@@ -298,9 +298,9 @@ Below that is a short paragraph of text too small to read, followed by a search 
 <li>Lose the paper mentality: bring content onto web pages and out of PDFs and posters</li>
 </ul>
 
-<h2> Request the research </h2>
+<h2>Request the research </h2>
 
-<p>Let us know what you think about this project. Email us at <a href="mailto:information@tbs-sct.gc.ca">information@tbs-sct.gc.ca</a> or tweet using the hashtag #Canadadotca.</p>
+<p>Email us at <a href="mailto:information@tbs-sct.gc.ca">information@tbs-sct.gc.ca</a>.</p>
 
 <h2> What do you think? </h2>
 
