--- a/research-summaries/frenchplaceholder.html
+++ b/research-summaries/frenchplaceholder.html
@@ -138,16 +138,30 @@ color: #3095B5 !important;
 </ul>
 
 <figure>
-<img class="img-responsive" alt="Hand-written sticky note on top of page with task for getting flu shot when pregnant.There are sticker dots on the note." src="../images/diseases-maladies-immun/task_JTBD.jpg" />
+<img class="img-responsive" alt="« Note autocollante écrite à la main en haut de la page avec la tâche de se faire vacciner contre la grippe pendant la grossesse. Il y a des points autocollants sur la note. »" src="../images/diseases-maladies-immun/task_JTBD.jpg" />
 <figcaption><small>Job stories with team's voting dots</small></figcaption>
 </figure>
 <details>
 <summary>
-Detailed description
+Description détaillée
 </summary>
+<p>[Tâche faisant l’objet d’un vote, qui est sur une feuille de papier imprimée]</p>
+<p>C’est la saison de la grippe et une membre de la famille est enceinte. Découvrez si elle se ferait vacciner contre la grippe pendant sa grossesse.</p>
+<ul><li>Commencez par le scénario F</li></ul>
+<p>Choisissez votre réponse ci-dessous :</p>
+<ul>
+	<li>Il est dit spécifiquement qu’elle ne devrait pas se faire vacciner contre la grippe</li>
+		<li>Il est dit spécifiquement qu’elle devrait se faire vacciner contre la grippe</li>
+			<li>Je n’ai pas trouvé ou ne pense pas pouvoir trouver la réponse en moins de 5 minutes</li>
+</ul>
+
+<p>[Les notes autocollantes sont placées sur la tâche imprimée]</p>
+<p>[Note autocollante 1 : Histoire d’emploi]  Quand je suis enceinte, je veux savoir quels vaccins je peux recevoir afin de protéger mon enfant et de ne pas lui faire de mal. [Il y a 10 points de vote sur cette note]</p>
+	<p>[Note autocollante 2] Difficulté avec la section sur l’immunisation, pas avec celle sur la grippe
+		<p>[Note autocollante 3] Grippe</p>
+			<p>[Note autocollante 4] Immunisation</p>
+
 <p>
-DESCRIPTION NEEDS TO GO HERE
-</p>
 
 </details>
 <p><br /></p>
