--- a/pages/2018_Canada.ca_Way_Forward_Authorization_and_Release.html
+++ b/pages/2018_Canada.ca_Way_Forward_Authorization_and_Release.html
@@ -33,7 +33,7 @@
 		<!-- Write closure template -->
 		<main role="main" property="mainContentOfPage" class="container">
 <h1>Authorization and Release</h1>
-<h2>Event: Canada.ca Way Forward, Ottawa</h2>
+<h2>Event: Canada.ca - Way Forward, Ottawa</h2>
 	<p>
   I grant Her majesty the Queen in right of Canada, as represented by the President of Treasury Board of Canada Secretariat (TBS), the right to take, modify, adapt, exhibit, publish, transmit, reproduce, create derivative work from, distribute and otherwise use my name, photograph, video and/or audio recording, likeness, artwork, profile and/or testimonial in any material developed by or on behalf of TBS, including but not limited to current and future publications, Web sites, videos and/or audio recordings for purposes that promotes and supports the mission of the TBS, whether for internal use or public dissemination.
 I forever release TBS from any liability from direct, indirect, special, incidental or consequential damages of any kind arising from the use of my name, photograph, video and/or audio recording, likeness, artwork, profile and/or testimonial.
