--- a/pages/apercu-projet.html
+++ b/pages/apercu-projet.html
@@ -281,7 +281,7 @@
 
 
 <details >
-					<summary class="borderless">  <h3 class="timeline-title">Renseignements sur la vaccination</h3> <div class="summary-custom"><div></summary>
+					<summary class="borderless">  <h3 class="timeline-title">Renseignements sur les maladies et la vaccination</h3> <div class="summary-custom"><div></summary>
 
 						<h4>Ministères partenaires</h4>
 
