--- a/research-summaries/diseases-research-summary.html
+++ b/research-summaries/diseases-research-summary.html
@@ -140,7 +140,7 @@ Detailed description
 
 <h2 id="establishing-a-baseline">Establishing a baseline</h2>
 
-<p>Before making changes, we established a baseline score through moderated usability testing. We recruited 16 employed parents of children under 18. These participants attended research sessions in Toronto and Ottawa with their smartphones in English or French. Participants were asked to complete the 11 task scenarios on the Canada.ca website. If they had time, they repeated one task on the Ontario.ca site for comparison.</p>
+<p>Before making changes, we established a baseline score through moderated usability testing. We recruited 16 employed parents of children under 18. These participants attended research sessions in Toronto and Ottawa with their smartphones. Participants were asked to complete the 11 task scenarios on the Canada.ca website. If they had time, they repeated one task on the Ontario.ca site for comparison.</p>
 
 <p>The task scenarios were presented in random order, except for the first and last tasks. Some tasks began on the home page of Canada.ca while others began on the Zika, Flu and immunization pages. The scenarios were presented on a tablet beside the participant. The participant could refer to the tablet while they attempted the task, and then return to enter in their answer and proceed to the next question.</p>
 
