--- a/research-summaries/maladies-resume-researche.html
+++ b/research-summaries/maladies-resume-researche.html
@@ -9,7 +9,7 @@
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
 		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/soyutils.js"></script>
-		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/wet-en.js"></script>
+		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/wet-fr.js"></script>
 
 		<!-- Write closure template -->
 		<script type="text/javascript">
@@ -36,16 +36,16 @@
 			var defTop = document.getElementById("def-top");
 			defTop.outerHTML = wet.builder.top({
 				lngLinks: [{
-					lang: "EN",
+					lang: "en",
 					href: "diseases-research-summary.html",
 					text: "English"
 				}],
 				breadcrumbs: [{
-					title: "Home",
-					href: "https://www.canada.ca/en.html"
+					title: "Accueil",
+					href: "https://www.canada.ca/fr.html"
 				},{
-					title: "About Canada.ca",
-					href: "https://www.canada.ca/en/government/about.html"
+					title: "Au sujet de Canada.ca",
+					href: "https://www.canada.ca/fr/gouvernement/a-propos.html"
 				}],
 				search: true,
 				siteMenu: true,
@@ -80,34 +80,6 @@
 }
 
 
-.pquote {
-
-    float: right;
-    width: 500px;
-    font-size: 30px !important;
-    line-height: 1.1em;
-    padding: 25px;
-}
-
-blockquote
-
-{
-    margin: 10px;
-	margin-left: 25px;
-
-}
-
-blockquote p {
-
-color: #3095B5 !important;
-
-}
-
-.quotesig {
-
-	font-size: 14px;
-
-}
 
 
 </style>
