weather research summary

--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -113,32 +113,47 @@
   <li><strong>Task:</strong> You are booked to golf this afternoon. The golf course is in Arnprior, about a 40 minute drive west of Ottawa. Do you need to bring a raincoat?</li>
 </ul>
 
+<figure>
+<img class="img-responsive" alt="Hand-written sticky notes on a wall with task for getting weather-related information." src="../images/weather-meteo/jobstories.jpg" width="800px" />
+<figcaption><small>Job stories</small></figcaption>
+<br>
+</figure>
 
 <figure>
-<img class="img-responsive" alt="Hand-written sticky note on top of page with task for getting flu shot when pregnant. There are sticker dots on the note." src="../images/diseases-maladies-immun/task_JTBD.jpg" />
-<figcaption><small>Job stories with team's voting dots</small></figcaption>
+<img class="img-responsive" alt="Hand-written sticky notes on top of page with design suggestions for improving icons. There are sticker dots on the note." src="../images/weather-meteo/design-suggestions.jpg" width="800px"/>
+<figcaption><small>Design suggestions with voting dots</small></figcaption>
+<br>
 </figure>
 <details>
 <summary>
 Detailed description
 </summary>
-<p>[Task being voted on, which is on a printed paper sheet]</p>
-<p>It is flu season and a family member is pregnant. Find out whether or not she should get a flu shot while pregnant.</p>
-<ul><li> Start at the F Scenario</li></ul>
-<p>Choose your answer below:</p>
+<p>[Solutions being voted on, which is on a printed paper sheet]</p>
+
+<p>HMW (how might we) better match expectations about icons (people touched them a lot!)</p>
+<p>Task 2 and Task 3: 24 hour. Task 6: Humidex night-day.</p>
+
+
+<p>[Sticky notes are placed on top of the print out, sticky notes with similar ideas are grouped together]</p>
+
+<p>[Sticky grouping 1] </p>
+<p>[There are 14 voting dots on this group] </p>
 <ul>
-	<li>It specifically says she should not get a flu shot</li>
-		<li>It specifically says she should get a flu shot</li>
-			<li>I didn't find or don't think I can find the answer within 5 mins</li>
+	<li>make forecast icon/text for today/tonight clickable </li>
+	<li>tonight clickable to hourly </li>
+	<li>click entire block not word </li>
+	<li>clickable icons/block sections </li>
+	<li>clickable icon </li>
+	<li>clickable icons on (illegible) to 24 hr test page/ how do we handle accessibility  </li>
+	<li>make current conditions box clickable to display condition details -> this would move forecast up </li>
 </ul>
 
-<p>[Sticky notes are placed on top of the printed out task]</p>
-<p>[Sticky note 1: Job story] When I get pregnant I want to know what vaccines I can get so I can protect/not harm my child [There are 10 voting dots on the note]</p>
-	<p>[Sticky note 2] Difficult in imm, not flu</p>
-		<p>[Sticky note 3] Flu</p>
-			<p>[Sticky note 4] Immunize</p>
 
-<p>
+<p>[Sticky note grouping 2] </p>
+<p>[There are 2 voting dots on this group]</p>
+<ul>
+<li>icons are a very simplistic representation of the weather</li>
+<li>animate current icon</li>
 
 </details>
 
@@ -257,7 +272,7 @@ Below that is a table showing local weather with all four columns visible. An ar
 
 <h2> What do you think? </h2>
 
-Let us know what you think about this project.  Tweet using the hashtag #Canadadotca.
+<p>Let us know what you think about this project.  Tweet using the hashtag #Canadadotca.</p>
 
 <h2> Explore further </h2>
 
