--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -161,7 +161,7 @@ Detailed description
 
 <p>From the long list of job stories, the team voted to narrow down to the top 7 stories. We crafted these stories into task scenarios that could be used to test the website with people in our target audiences.</p>
 
-<h2>Recruiting Participants</h2>
+<h2>Recruiting participants</h2>
 
 <p>Before making changes, we established a baseline score through moderated usability testing. 16 participants attended research sessions in Toronto, Gatineau, Montreal and Ottawa with their smartphones, a further 4 participants were tested remotely on their desktop computers. Recruitment focused on individuals who were either employed or self-employed full-time outside the home. Participants were asked to complete the 7 task scenarios on the Canada.ca website. </p>
 
