--- a/research-summaries/maladies-resume-researche.html
+++ b/research-summaries/maladies-resume-researche.html
@@ -123,7 +123,7 @@ d’harmoniser le projet avec cet objectif.</p>
 
 <figure>
 <img class="img-responsive" alt="« Note autocollante écrite à la main en haut de la page avec la tâche de se faire vacciner contre la grippe pendant la grossesse. Il y a des points autocollants sur la note. »" src="../images/diseases-maladies-immun/task_JTBD.jpg" />
-<figcaption><small>Scénario avec des points de vote de l’équipe</small></figcaption>
+<figcaption><small>Scénario avec des points de vote de l’équipe (en anglais)</small></figcaption>
 </figure>
 <details>
 <summary>
